src/objects/OrganizationString__c.object
<CustomObject>
    <fields>
        <fullName>clEMProjectGrouping__c</fullName>
        <label>EM Project Grouping</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP-Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP-Alternative Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP-Carson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP-Cherry Point</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP-International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP-Lubricant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP-M&amp;A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP-Miscellaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP-Pipeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP-RM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP-RM and ENFOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP-S&amp;O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP-Texas City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP-Toledo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP-Upstream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP-White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>El Paso Sole Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSA Contract GS-10F-115K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Grid Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC Dept of Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPG Chrom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unassigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UTC Multi-Media Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UTC Remediation Contract</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clEUClientSectorCodes__c</fullName>
        <label>EU Client Sector Codes</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Highways</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Transport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil &amp; Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ports &amp; Harbours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rivers &amp; Coastal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unassigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clEURESPClientEndMarket__c</fullName>
        <label>EUR ESP Client End Market</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACUAMED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACUASEGURA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADIF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM IRLANDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM POLONIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AENA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG.DE OBRA PUB. DE LA JUN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGUAS DE LAS CUENCAS MEDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGUAS DEL PUERTO EMPRESA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTOV. DE ARAGON. SDAD. C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVENUE TWC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AYTO. DE ZARAGOZA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AYUNTAMIENTO DE ALMERIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZVI - SAN JOSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANAL ISABEL II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMMISSION OF THE EUROPEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONF. HID. DEL EBRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONF. HID. DEL GUADALQUIV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONF. HID. DEL SEGURA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONSORCIO URBANISTICO ALC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CREDIT SUISSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DRAGADOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EGMASA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESAMUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUROPEAN COMMISSION</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clEURITAClientGroup__c</fullName>
        <label>EUR ITA Client Group</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>API</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unassigned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clEURITAINARCASSA__c</fullName>
        <label>EUR ITA INARCASSA</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unassigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clEURITAPublicAuthority__c</fullName>
        <label>EUR ITA Public Authority</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unassigned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clEURUKMarketSectors__c</fullName>
        <label>EUR UK Market Sectors</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Transport / Aviatio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer / Data Centres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Courts and Custodial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dev - Wat + Env</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H/B - EU / CIS Highway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H/B - Local Roads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H/B - National Roads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H/B - Spec Structures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labs / Pharma / Chem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Auth. Env Advice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marine Spatial Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Msm / Glry / Public Lib</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nat / Local Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Highways</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil / Coal / Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDD - Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDD - Infrastructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDD - Leisure + Culture</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clEURUKPracticeLines__c</fullName>
        <label>EUR UK Practice Lines</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARC - Architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE - Acoustics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE - Building Physics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE - Facilities Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE - Fire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE - Health + Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE - ITC / Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE - Lighting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE - SDG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE - Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE - Structural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS - Construction Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS – Global Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENE - Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENV - Acoustics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENV - Air Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENV - Archaeology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENV - Ecology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENV - EHS Management Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENV - EIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENV - GIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENV - Landscape</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENV - Remediation Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENV - Waste Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCC - Asset Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCC - Building Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCC - Business Economics</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clEURUKRDQualified__c</fullName>
        <label>EUR UK R&amp;D Qualified</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clEndClientSector__c</fullName>
        <label>End Client Sector</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ChemPharma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freight Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Highway &amp; Bridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial &amp; Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leisure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining &amp; Metals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil &amp; Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other National Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Port &amp; Marine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Federal Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wastewater Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water Systems</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clGlobalPracticeLines__c</fullName>
        <label>Global Practice Lines</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATC Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Envir + Ecological Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Entities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Military Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Occupancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strat Plan + Econ Devel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unassigned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clGlobalProjectTemplate__c</fullName>
        <label>Global Project Template</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clIDIQGSAGovtOHReserve__c</fullName>
        <label>IDIQ/GSA/Govt OH Reserve</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GOVT OH RATE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSA / GOVT OH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSA / IDIQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSA CONTRACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDIQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDIQ &amp; GOVT OH RATE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDIQ / GOVT OH / GSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint Venture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unassigned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clLegacyLegalEntityOnContract__c</fullName>
        <label>Legacy Legal Entity On Contract</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM A&amp;E (JV FOR NY)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM A&amp;E (NJ) INC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM ARCHITECTS PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM DESIGN A PROF CORP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM DESIGN SERVICES INC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM ENTERPRISES INC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM INC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM INFRASTRUCTURE INC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM LOUISIANA A PROF CORP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM OF NEVADA INC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM PACIFIC INC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM SERVICES INC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM SERVICES OF PA INC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM SVS OF DC A PROF CORP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM SVS OF ILLINOIS INC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM SVS OF MICHIGAN INC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM SVS OF NC INC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM SVS OF OHIO INC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM TECHNICAL SERVICES INC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM USA INC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATC ARCHITECTURE INC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATC ENGINEERING INC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATS A&amp;E (FOR CT MA RI ONLY)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATS NORTH CAROLINA INC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATS NORTHEAST (NY ONLY)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATS OF MICHIGAN INC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSA MICHIGAN INC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clLondonTeams__c</fullName>
        <label>London Teams</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clMasterContract__c</fullName>
        <label>Master Contract</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFCEE 4P08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFCEE WERC 09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPA GLNPO (EQM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPA Region I RAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAVFAC Atlantic Clean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAVFAC Pacific Clean III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAVFAC Pacific Clean IV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAVFAC Southwest PERMAC II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US DOE Env. Mgmt (F&amp;O)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US DOE Env. Mgmt (SBSA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USACE Alaska HTRW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USACE Baltimore HTRW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USACE Kansas City HTRW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USACE Mobile Consulting Srvc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USACE Mobile HTRW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USACE Portland H&amp;H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USACE Sacramento ERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USACE Tulsa HTRW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USAESC Huntsville WERS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clMiningProject__c</fullName>
        <label>Mining Project</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>